--- a/src/components/ReviewItem/ReviewItem.css
+++ b/src/components/ReviewItem/ReviewItem.css
@@ -4,16 +4,23 @@
 
 .review-details-container {
     display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .review-item {
     display: flex;
     border: 1px solid #95A0A7;
     width: 571px;
-    margin: 0 auto;
+    margin: 21px auto;
     padding: 8px;
 }
 
 .review-details p {
     margin: 0;
+}
+
+.delete-button {
+    font-size: 31px;
 }
